2001-12-11  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Fix typo in jikes test.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Don't insert obsolete Rules-* files into
	the Makefile.

2001-12-03  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Fix construction of Makefile if
	builddir != srcdir.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* lib-ld.m4: New file, extracted from libtool-1.4 libtool.m4.
	* lib-link.m4: New file.
	* lib-prefix.m4: New file.
	* Makefile.am (aclocal_DATA): Add them.
	(EXTRA_DIST): Likewise.
	* iconv.m4 (AM_ICONV): Remove AC_ARG_WITH call. Invoke
	AC_LIB_LINKFLAGS_BODY. Use $LIBICONV instead of "-lintl". Add
	$INCICONV to CPPFLAGS if appropriate.
	* gettext.m4 (AM_WITH_LIBINTL): Remove macro.
	(AM_GNU_GETTEXT): Invoke AC_LIB_LINKFLAGS_BODY. Use $LIBINTL instead
	of "-lintl $LIBICONV". Add $INCINTL to CPPFLAGS if appropriate.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Avoid an error message if there is
	no Rules-* file.

2001-12-04  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Exclude at.dms.kjc.Main (KOPI) versions
	released in 2000, because they can't compile intl-java. Version 1.4F
	[May 2000] is buggy, version 1.5B [August 2001] is OK.

2001-11-25  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Also substitute UPDATEPOFILES and
	DUMMYPOFILES into Makefile. Also insert Makevars and Rules-* into
	Makefile.

2001-11-18  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4: Split into submacros.
	(AM_GNU_GETTEXT): Allow the first argument to be 'external'. Verify
	the first two arguments. Add --with-libintl-prefix option.
	(AM_WITH_LIBINTL, AM_PO_SUBDIRS, AM_INTL_SUBDIR): New macros.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): For builds with $builddir != $srcdir,
	prepend $(srcdir) to all elements of POFILES and GMOFILES.
